# SprintZeroAnalyzer

./: .gitignore  CLAUDE.md  README.md  app.py  detection.py  firestore_loader.py  netlify.toml  pyproject.toml  validation.ipynb
.githooks/: pre-commit
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/components/: AccelChart.svelte  DashboardCard.svelte  DashboardModal.svelte  FileUpload.svelte  FirestoreButton.svelte  GyroChart.svelte  HeroCard.svelte  MetricsCards.svelte  SplitsTable.svelte  SprintDetail.svelte  SprintTable.svelte  VelocityChart.svelte
frontend/src/lib/: compact-curve.ts  firestore-api.ts  state.svelte.ts  types.ts  wasm.ts
frontend/src/lib/charts/: accel.ts  gyro.ts  velocity.ts
frontend/src/routes/: +page.svelte
rust/: Cargo.toml
rust/src/: lib.rs  types.rs
rust/src/biomechanics/: mod.rs  splits.rs  velocity.rs
rust/src/detection/: bidirectional.rs  mod.rs  piecewise_linear.rs
rust/src/parsing/: falcata.rs  mod.rs  sprintzero.rs
rust/src/passport/: mod.rs
rust/src/signal/: filters.rs  kalman.rs  mod.rs
web/: index.html  netlify.toml  style.css
web/js/: chart.js  detail.js  detection.js  main.js  table.js
