[package]
name = "sprintzero-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.release]
opt-level = "s"
lto = true
